# tap-redshift

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_redshift/: __main__.py  client.py  schema.py  tap.py
tests/: test_core.py
